# PhaseForge

./: .gitignore  README.md
api/: .env.example  README.md  pyproject.toml
api/app/: main.py
api/app/core/: auth.py  config.py  supabase.py
api/app/models/: generation.py  ingest.py  phase2_contracts.py
api/app/services/: chunking.py  course_retrieval.py  embeddings.py  figures.py  generation.py  material_files.py  materials.py  parsing.py  questions.py  retrieval.py
api/tests/: test_auth.py  test_chunking.py  test_embeddings.py  test_figures.py  test_ingest.py  test_material_files.py  test_materials_embeddings.py  test_parsing.py  test_phase2_contracts.py  test_retrieval.py
desktop/: .env.example  .gitignore  README.md  package-lock.json  package.json
desktop/src/main/: index.ts
desktop/src/preload/: index.d.ts  index.ts
desktop/src/renderer/src/: App.tsx  env.d.ts  lockdown.ts  mock.ts  supabase.ts
docs/: ingest-interface.md  phase2-contracts.md  repo-structure.md  schema.md
shared/fixtures/phase2/: family_template.json  generated_question.json  integration_bundle.json  question_variant.json  verification_result.json
supabase/: README.md
supabase/migrations/: 0004_assessments.sql  0005_match_material_chunks.sql  0010_questions_figure_svg.sql
web/: .env.local.example  README.md  middleware.ts  package-lock.json  package.json
web/src/app/: layout.tsx  page.tsx
web/src/app/(auth)/: actions.ts  layout.tsx
web/src/app/(dashboard)/: layout.tsx
web/src/components/dashboard/: assessment-builder.tsx  pool-summary.tsx  question-pool-browser.tsx  (+3 more)
(+20 files in other folders)
