[project]
name = "phaseforge-api"
version = "0.1.0"
description = "FastAPI backend and ingestion pipeline for PhaseForge."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.1",
    "supabase>=2.0.0",
    "PyJWT[crypto]>=2.10.0",
    "pymupdf>=1.24.0",
    "openai>=1.0.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "httpx>=0.27.2",
    "mypy>=1.13.0"
]

[tool.mypy]
mypy_path = "."
